--- a/HW2/main.ipynb
+++ b/HW2/main.ipynb
@@ -3904,7 +3904,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2) Fine-tune a decisiontree model"
+    "### Fine-tune a decisiontree model"
    ]
   },
   {
@@ -3931,7 +3931,7 @@
     }
    ],
    "source": [
-    "decision_tree = DecisionTreeClassifier(max_depth=4) # Added depth hyperparameter to fine tune the model.\n",
+    "decision_tree = DecisionTreeClassifier(max_depth=4)\n",
     "decision_tree.fit(X_train, Y_train)\n",
     "Y_pred = decision_tree.predict(X_test)\n",
     "acc_decision_tree = round(decision_tree.score(X_train, Y_train) * 100, 2)\n",
@@ -3993,7 +3993,7 @@
     }
    ],
    "source": [
-    "random_forest = RandomForestClassifier(n_estimators=250, random_state = 42) #added hyperparameters for random forest\n",
+    "random_forest = RandomForestClassifier(n_estimators=250, random_state = 42)\n",
     "random_forest.fit(X_train, Y_train)\n",
     "Y_pred = random_forest.predict(X_test)\n",
     "random_forest.score(X_train, Y_train)\n",
